src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assignment links Project and Expert that feedback is requested on.</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>Assignment__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Skills__c</fullName>
        <label>Communication Skills</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_Well_Comments__c</fullName>
        <label>Did Well Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This contact name is the Expert for which the feedback is submitted.</inlineHelpText>
        <label>Expert</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expert Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Improve_Comments__c</fullName>
        <label>Improve Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overall_Performance__c</fullName>
        <label>Overall Performance</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Assignment__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Workflow to track submissions and support reporting</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This contact represents the 10K team member who submitted the feedback.</inlineHelpText>
        <label>Submitter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feedback (Submitter)</relationshipLabel>
        <relationshipName>Feedback_Submitted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <formula>&quot;https://www.getfeedback.com/r/UDe2LrjY?FEEDBACKID=&quot;&amp;Id&amp;&quot;&amp;EXPERTNAME=&quot;&amp;Expert__r.FirstName&amp;&quot;%20&quot;&amp;Expert__r.LastName&amp;&quot;&amp;PROJECTNAME=&quot;&amp;SUBSTITUTE(Project_Name__c,&quot; &quot;,&quot;%20&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teamwork__c</fullName>
        <label>Teamwork</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Skills__c</fullName>
        <label>Technical Skills</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Assignment__c</columns>
        <columns>Expert__c</columns>
        <columns>Submitter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>